# beangulp

./: .gitignore  .pylintrc  .ruff.toml  Makefile  PKG-INFO  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: install.yaml  lint.yaml  release.yaml  test.yaml  wheels.yaml
beangulp/: BUILD  __init__.py  archive.py  archive_test.py  cache.py  cache_test.py  csv_utils.py  csv_utils_test.py  date_utils.py  date_utils_test.py  exceptions.py  extract.py  extract_test.py  file.py  file_test.py  file_type.py  file_type_test.py  identify.py  identify_test.py  importer.py  importer_test.py  mimetypes.py  petl_utils.py  petl_utils_test.py  regression.py  regression_pytest.py  regression_test.py  scripts_utils.py  similar.py  similar_test.py  simple_cache.py  simple_cache_test.py  test_utils.py  testing.py  utils.py  utils_test.py
beangulp/importers/: BUILD  config_test.py  csv.py  csv_importer.py  csv_importer_test.py  csv_test.py  csvbase.py  csvbase_test.py  fileonly.py  fileonly_test.py  ofx_importer.py  ofx_importer_test.py  ofx_test.py
beangulp/importers/mixins/: config.py  filing.py  identifier.py
beangulp/tests/: __init__.py  archive.rst  doctests_test.py  extract.rst  filing.rst  identify.rst  test_filing.py  testing.rst  utils.py
etc/: env
examples/: README.md  import.py
examples/Downloads/: ofxdownload.ofx
examples/importers/: acme.py  csvbank.py  newcsvbank.py  ofx.py  runtests.sh  utrade.py
examples/importers/tests/: test_ofx.py
examples/importers_tests/acme/: acmebank1.pdf.beancount
examples/importers_tests/utrade/: UTrade20150225.csv.beancount
examples/ledger/: ledger.import
examples/office/: README  example.import  example_import.py  import.py
examples/office/importers/: conftest.py
examples/office/importers/acme/: acme_pdf.py  acme_pdf_test.py
examples/office/importers/utrade/: utrade_csv.py  utrade_csv_test.py
examples/tests/csvbank/: statement.csv  statement.csv.beancount
examples/tests/ofx/: ofxdownload.ofx.beancount
examples/tests/utrade/: UTrade20150720.csv.beancount
tests/: test_cache.py  test_doctests.py  testing.rst
tools/: migrate_files.py
