[build-system]
requires = ['setuptools >= 60.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'beangulp'
version = '0.2.0'
license = { file = 'LICENSE' }
description = 'Importers Framework for Beancount'
readme = 'README.rst'
authors = [
    { name = 'Martin Blais', email = 'blais@furius.ca' },
    { name = 'Daniele Nicolodi', email = 'daniele@grinta.net' },
]
maintainers = [
    { name = 'Daniele Nicolodi', email = 'daniele@grinta.net' },
]
keywords = ['accounting', 'ledger', 'beancount', 'importer', 'import', 'converter', 'conversion']
classifiers = [
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Office/Business :: Financial :: Accounting',
    'Topic :: Text Processing :: General',
]
dependencies = [
    'beancount >=2.3.5',
    'beautifulsoup4',
    'chardet',
    'click >8.0',
    'lxml',
    'python-magic >=0.4.12; sys_platform != "win32"',
]

[project.urls]
homepage = 'https://github.com/beancount/beangulp'
issues = 'https://github.com/beancount/beangulp/issues'

[tool.setuptools.packages]
find = {}

[tool.ruff]
line-length = 128
target-version = 'py37'
lint.select = ['E', 'F', 'W', 'UP', 'B', 'C4', 'PL', 'RUF']
lint.ignore = [
    'B007',
    'B020',
    'E731',
    'PLR0911',
    'PLR0912',
    'PLR0913',
    'PLR0915',
    'PLR2004',
    'PLW2901',
    'RUF012',
    'UP015',
    'UP032',
]

[tool.pytest.ini_options]
minversion = '6.0'
addopts = ['--doctest-glob=*.rst']
doctest_optionflags = ['ELLIPSIS', 'NORMALIZE_WHITESPACE']
testpaths = ['beangulp']
