[metadata]
name = beangulp
version = 0.1.dev0
description = Importers Framework for Beancount
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/beancount/beangulp
author = Martin Blais
author_email = blais@furius.ca
keywords = accounting ledger beancount importer import converter conversion
license = GPL-2.0
license_file = COPYING
project_urls =
    Bug Tracker = https://github.com/beancount/beangulp/issues
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Text Processing :: General


[options]
include_package_data = True
packages = find:
install_requires =
    beancount >=2.3.5
    beautifulsoup4
    chardet
    click >7.0
    lxml
    python-magic >=0.4.12; sys_platform != 'win32'
